Quoco_WS - finished the project, working on maven and docker